Fixed Background Colour and H2 alignment

--- a/css/main.css
+++ b/css/main.css
@@ -198,7 +198,7 @@ dt {
 h2 {
 	background-color: #dc8252;
 	color: white;
-	padding-top: 0;
+	margin-top:0;
 }
 
 h3 {
